[package]
name = "ui-native"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12"
lazy_static = "1.4"
paste = "^1"
iota = "0.2"
taffy = "0.5"
serde = "^1"
crossbeam-channel = "0.5"
anyhow = "^1"

[target.'cfg(target_os="android")'.dependencies]
jni = "^0.21"
android-activity = {version = "^0.6", features=["native-activity"]}
android_logger = "0.11.0"

[target.'cfg(target_os="linux")'.dependencies]
gtk4 = {version="0.8", features=["v4_2"]}
glib = "0.19"

[target.'cfg(target_family="wasm")'.dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Element',
  'Node',
  'Window',
  'HtmlElement',
  "HtmlDivElement",
  "CssStyleDeclaration",
  "HtmlCollection"
]